zulip/zulip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
  namespace: zulip
  labels:
    app: zulip
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zulip
  template:
    metadata:
      labels:
        app: zulip
    spec:
      containers:
        - name: redis
          image: redis:alpine
          command:
            - "sh"
            - "-euc"
            - |
              echo "requirepass '$$REDIS_PASSWORD'" > /etc/redis.conf
              exec redis-server /etc/redis.conf
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /var/lib/redis

        - name: memcached
          image: memcached:alpine
          command:
            - "sh"
            - "-euc"
            - |
              echo 'mech_list: plain' > "$$SASL_CONF_PATH"
              echo "zulip@$$HOSTNAME:$$MEMCACHED_PASSWORD" > "$$MEMCACHED_SASL_PWDB"
              echo "zulip@localhost:$$MEMCACHED_PASSWORD" >> "$$MEMCACHED_SASL_PWDB"
              exec memcached -S
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 768Mi

        - name: rabbitmq
          image: rabbitmq:3.12-alpine
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: rabbitmq-persistent-storage
              mountPath: /var/lib/rabbitmq

        - name: postgresql
          image: zulip/zulip-postgresql:14
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: postgresql-persistent-storage
              mountPath: /var/lib/postgresql/data

        - name: zulip
          image: zulip/docker-zulip:11.4-0
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 8Gi
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
          volumeMounts:
            - name: zulip-persistent-storage
              mountPath: /data

      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-data
        - name: rabbitmq-persistent-storage
          persistentVolumeClaim:
            claimName: rabbitmq-data
        - name: postgresql-persistent-storage
          persistentVolumeClaim:
            claimName: postgresql-data
        - name: zulip-persistent-storage
          persistentVolumeClaim:
            claimName: zulip-data
