zulip/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zulip-ingress
  namespace: zulip
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chat.cngei.it`)
      services:
        - kind: Service
          name: zulip-svc
          port: 80
  tls:
    secretName: zulip-tls
